Avoid work break in groups listing

--- a/ckanext/pigma_theme/fanstatic/pigma_theme.css
+++ b/ckanext/pigma_theme/fanstatic/pigma_theme.css
@@ -410,4 +410,6 @@ fieldset.checkboxes label input[type=checkbox] {
 }
 .media-heading {
     color: #005EA3;
+    word-break: normal;
+    hyphens: none;
 }
